<?xml version="1.0"?>
<package>
  <name>keigan_motor_follower</name>
  <version>0.0.1</version>
  <description>The keigan_motor_follower package</description>

  <maintainer email="furqan.habibi1@gmail.com">Muhammad Furqan Habibi</maintainer>

  <license>Apache-2.0</license>

  <author email="furqan.habibi1@gmail.com">Muhammad Furqan Habibi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rviz</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
